404 — Initial File Creation

--- a/404.html
+++ b/404.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Gabriel Mitchell Portoflio</title>
+<title>404 Error</title>
 </head>
 
 <body>
 
-<h1>Salutations, Denizens of Earth!</h1>
+<h1>Oh No, 404.</h1>
 
 </body>
 </html>
