Typography CSS — Initial File Creation
Staging for error/404, as well as welcome page.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Gabriel Mitchell Portoflio</title>
+  <link href="css/typography.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
 
-<h1>Salutations, Denizens of Earth!</h1>
-
+<h1 class="error">Good things come to those who wait.</h1>
+<img class="welcome" src="" alt="Good Things Come To Those Who Wait.">
 </body>
 </html>
