--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 
-<h1 class="error">Good things come to those who wait.</h1>
-<img class="welcome" src="" alt="Good Things Come To Those Who Wait.">
+<div class="welcome">
+	<h1 class="error">Good things come to those who wait.</h1>
+	<img src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
+</div>
 </body>
 </html>
