--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="welcome">
 	<h1 class="error">Good things come to those who wait.</h1>
-	<img src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
+	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
 </div>
 </body>
 </html>
