--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <div>
-	<img class="error-logo welcome" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
-	<h1 class="error">Good things come to those who wait.</h1>
+	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
+	<h1 class="error welcome">Good things come to those who wait.</h1>
 </div>
 </body>
 </html>
