Attempting to streamline…

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
 
-<div>
+<div class="welcome">
 	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
-	<h1 class="error welcome">Good things come to those who wait.</h1>
+	<div class="error-textbox">
+		<h1 class="error">Good things come to those who wait.</h1>
+	</div>
 </div>
 </body>
 </html>
