--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<!-- LANDING PAGE
 <div class="welcome">
 	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
 	<div class="error-textbox">
@@ -16,6 +17,9 @@
 	</div>
 
 </div>
+-->
+
+
 
 </body>
 </html>
