Jekyll Deployed for—
— layouts, css, html, includes
meta data added for default & 404 html
amended CSS file migration

--- a/404.html
+++ b/404.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>404 Error</title>
-</head>
-
-<body>
+---
+layout: default
+title: 404 Error
+meta-desc: You've encountered an error. Let's fix that.
+meta-keywords: error, gabriel mitchell, portfolio
+---
 
 <h1>Oh No, 404.</h1>
-
-</body>
-</html>
