--- a/index.html
+++ b/index.html
@@ -1,25 +1,12 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Gabriel Mitchell Portoflio</title>
-  <link href="css/typography.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500,700' rel='stylesheet' type='text/css'>
-</head>
+---
+layout: default
+title: Welcome
+---
 
-<body>
 
-<!-- LANDING PAGE
 <div class="welcome">
 	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
 	<div class="error-textbox">
 		<h1 class="error">Good things come to those who wait.</h1>
 	</div>
-
 </div>
--->
-
-
-
-</body>
-</html>
