Skeletal Nav Established + Shift in Color
Code redundancies removed or amended, added colours, shifted colour
scheme coral, Largest & Smallest type weight shift, page title order
changed.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@ title: Welcome
 ---
 
 
-<div class="welcome">
-	<img class="error-logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">
-	<div class="error-textbox">
-		<h1 class="error">Good things come to those who wait.</h1>
-		<h2 class="error">Good things come to those who wait.</h2>
-		<h3 class="error">Good things come to those who wait.</h3>
-		<h4 class="error">Good things come to those who wait.</h4>
-		<h5 class="error">Good things come to those who wait.</h5>
-		<h6 class="error">Good things come to those who wait.</h6>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet, eros sed dignissim blandit, sapien dui ullamcorper risus, imperdiet varius mauris ante vel ex. Donec commodo aliquam elit et faucibus. Sed non ante leo. Suspendisse metus turpis, pharetra at erat sit amet, dignissim fermentum urna. Pellentesque pellentesque, leo id aliquam pretium, ante arcu fringilla risus, a commodo massa odio porttitor sapien. In congue neque nec libero dapibus, nec vestibulum libero lobortis. Nulla auctor nulla et sapien pretium, quis vestibulum est vehicula. In rhoncus mi eu vestibulum interdum. Fusce mollis id leo a elementum. Phasellus ut enim dictum, sodales dolor a, malesuada tortor. Aenean auctor felis at enim dapibus, at rutrum libero viverra. In mollis semper nisl.</p>
+<div id="welcome" class="welcome">
+<!--	<img class="logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">-->
+	
+	<object type="image/svg+xml" data="images/logo-gm.svg" class="logo">
+	  Gabriel Mitchell Fox Logo <!-- fallback image in CSS -->
+	</object>	
+	
+	<div>
+	<hr/>
+		<h2 class="multiverse">Multiple things come to those who wait.</h2>
+		<h2 class="universe">Universal things come to those who wait.</h2>
+		<h1 class="galaxy">Galactic things come to those who wait.</h1>
+		<h2 class="starsystem">Systemic things come to those who wait.</h2>
+		<h3 class="star">Starry things come to those who wait.</h3>
+		<h4 class="planet">Planet things come to those who wait.</h4>
+		<h5 class="organism">Organic things come to those who wait.</h5>
+		<h6 class="cell">Cellular things come to those who wait.</h6>
+		<h6 class="atom">Atomic things come to those who wait.</h6>
+		<h6 class="string">Stringy things come to those who wait.</h6>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Nulla</strong> imperdiet, eros sed dignissim blandit, sapien dui <mark>ullamcorper</mark> risus, imperdiet varius mauris ante vel ex. Donec commodo aliquam elit et faucibus. Sed non ante leo. Suspendisse metus turpis, pharetra at erat sit amet, dignissim <em>fermentum</em> urna. Pellentesque pellentesque, leo id aliquam pretium, ante arcu fringilla risus, a commodo massa odio porttitor sapien. In congue neque nec libero dapibus, nec vestibulum libero lobortis. Nulla auctor nulla et sapien pretium, quis vestibulum est vehicula. In rhoncus mi eu vestibulum interdum. Fusce mollis id leo a elementum. Phasellus ut enim dictum, sodales dolor a, malesuada tortor. Aenean auctor felis at enim dapibus, at rutrum libero viverra. In mollis semper nisl.</p>
 
-		<p>Curabitur molestie nulla id rutrum mollis. Sed sed ornare mauris. Cras at volutpat nunc. Maecenas consequat nisi vitae mi pellentesque aliquet. Aliquam erat volutpat. In egestas iaculis dignissim. Aliquam faucibus commodo velit sit amet semper. Donec varius velit vitae urna lobortis, sit amet rhoncus urna aliquam. Donec in mi eget dolor viverra vulputate. Duis nec risus eleifend, commodo est in, lobortis felis. Nam vitae suscipit mauris. Vestibulum dictum a odio a feugiat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+		<p>Curabitur molestie nulla id rutrum mollis. Sed sed ornare mauris. Cras at volutpat nunc. Maecenas consequat nisi vitae mi <strong>pellentesque</strong> aliquet. <em>Aliquam</em> erat volutpat. In egestas iaculis dignissim. Aliquam faucibus commodo velit sit amet semper. Donec varius velit vitae urna lobortis, sit amet rhoncus urna aliquam. Donec in mi eget dolor viverra vulputate. Duis nec risus eleifend, commodo est in, lobortis felis. Nam vitae suscipit mauris. Vestibulum dictum a odio a feugiat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 	</div>
 </div>
