--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@ title: Welcome
 <!--	<img class="logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">-->
 	
 	<object type="image/svg+xml" data="images/logo-gm.svg" class="logo">
-	  Gabriel Mitchell Fox Logo <!-- fallback image in CSS -->
+	  <a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
 	</object>	
 	
 	<div>
-	<hr/>
-		<h2 class="multiverse">Multiple things come to those who wait.</h2>
+		<h2 class="multiverse"><a href="#">Multiple</a> things come to those who wait.</h2>
 		<h2 class="universe">Universal things come to those who wait.</h2>
 		<h1 class="galaxy">Galactic things come to those who wait.</h1>
 		<h2 class="starsystem">Systemic things come to those who wait.</h2>
