Contact skeleton setup

--- a/index.html
+++ b/index.html
@@ -27,3 +27,5 @@ title: Welcome
 		<p>Curabitur molestie nulla id rutrum mollis. Sed sed ornare mauris. Cras at volutpat nunc. Maecenas consequat nisi vitae mi <strong>pellentesque</strong> aliquet. <em>Aliquam</em> erat volutpat. In egestas iaculis dignissim. Aliquam faucibus commodo velit sit amet semper. Donec varius velit vitae urna lobortis, sit amet rhoncus urna aliquam. Donec in mi eget dolor viverra vulputate. Duis nec risus eleifend, commodo est in, lobortis felis. Nam vitae suscipit mauris. Vestibulum dictum a odio a feugiat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 	</div>
 </div>
+
+		{% include contact.html %}
