Information Toggle Re-established
A suitable version was located.
+ Minor typographic tweaks
+ Section Banners created
+ Colorized placeholders

--- a/index.html
+++ b/index.html
@@ -11,23 +11,14 @@ title: Welcome
 	  <a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
 	</object>	
 	
-	<div>
-		<h2 class="multiverse"><a href="#">Multiple</a> things come to those who wait.</h2>
-		<h2 class="universe">Universal things come to those who wait.</h2>
-		<h1 class="galaxy">Galactic things come to those who wait.</h1>
-		<h2 class="starsystem">Systemic things come to those who wait.</h2>
-		<h3 class="star">Starry things come to those who wait.</h3>
-		<h4 class="planet">Planet things come to those who wait.</h4>
-		<h5 class="organism">Organic things come to those who wait.</h5>
-		<h6 class="cell">Cellular things come to those who wait.</h6>
-		<h6 class="atom">Atomic things come to those who wait.</h6>
-		<h6 class="string">Stringy things come to those who wait.</h6>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Nulla</strong> imperdiet, eros sed dignissim blandit, sapien dui <mark>ullamcorper</mark> risus, imperdiet varius mauris ante vel ex. Donec commodo aliquam elit et faucibus. Sed non ante leo. Suspendisse metus turpis, pharetra at erat sit amet, dignissim <em>fermentum</em> urna. Pellentesque pellentesque, leo id aliquam pretium, ante arcu fringilla risus, a commodo massa odio porttitor sapien. In congue neque nec libero dapibus, nec vestibulum libero lobortis. Nulla auctor nulla et sapien pretium, quis vestibulum est vehicula. In rhoncus mi eu vestibulum interdum. Fusce mollis id leo a elementum. Phasellus ut enim dictum, sodales dolor a, malesuada tortor. Aenean auctor felis at enim dapibus, at rutrum libero viverra. In mollis semper nisl.</p>
+</div>
 
-		<p>Curabitur molestie nulla id rutrum mollis. Sed sed ornare mauris. Cras at volutpat nunc. Maecenas consequat nisi vitae mi <strong>pellentesque</strong> aliquet. <em>Aliquam</em> erat volutpat. In egestas iaculis dignissim. Aliquam faucibus commodo velit sit amet semper. Donec varius velit vitae urna lobortis, sit amet rhoncus urna aliquam. Donec in mi eget dolor viverra vulputate. Duis nec risus eleifend, commodo est in, lobortis felis. Nam vitae suscipit mauris. Vestibulum dictum a odio a feugiat. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-	</div>
+<div id="works" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+	<h2 class="galaxy center-text w400">WORKS</h2>
 </div>
 
 		{% include pieces.html %}
+
+
 
 		{% include contact.html %}
