--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@ title: Welcome
 
 		{% include pieces.html %}
 
+<div id="about" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+	<h2 class="galaxy center-text w400">ABOUT</h2>
+</div>
+
+		{% include about.html %}
+
+<div id="contact" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+	<h2 class="galaxy center-text w400">CONTACT</h2>
+</div>
 
 
 		{% include contact.html %}
