I've made it worse.
ughhh

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@ title: Welcome
 	
 </div>
 
-<div id="works" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+<div id="works" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
 	<h2 class="galaxy center-text w400">WORKS</h2>
 </div>
 
 		{% include pieces.html %}
 
-<div id="about" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
 	<h2 class="galaxy center-text w400">ABOUT</h2>
 </div>
 
 		{% include about.html %}
 
-<div id="contact" class="wrap banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+<div id="contact" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
 	<h2 class="galaxy center-text w400">CONTACT</h2>
 </div>
 
