--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Welcome
 	
 </div>
 
-<div id="works" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
+<div id="work" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8 nav-bar-center">
 	<h2 class="galaxy center-text w400">WORKS</h2>
 </div>
 
