--- a/index.html
+++ b/index.html
@@ -13,21 +13,26 @@ title: Welcome
 	
 </div>
 
-<div id="work" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
-	<h2 class="galaxy center-text w400">WORKS</h2>
+<div class="wrap buffer">
+	<div id="work" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
+		<h2 class="galaxy center-text w400">WORKS</h2>
+	</div>
 </div>
 
 		{% include pieces.html %}
 
-<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
-	<h2 class="galaxy center-text w400">ABOUT</h2>
+<div class="wrap buffer">
+	<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
+		<h2 class="galaxy center-text w400">ABOUT</h2>
+	</div>
 </div>
 
 		{% include about.html %}
 
-<div id="contact" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
-	<h2 class="galaxy center-text w400">CONTACT</h2>
+<div class="wrap buffer">
+	<div id="contact" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
+		<h2 class="galaxy center-text w400">CONTACT</h2>
+	</div>
 </div>
-
 
 		{% include contact.html %}
