Minor Message for Work in Progress
+ Placehold it Text added.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Welcome
 
 	<header>
 		<div>
-			<img src="http://placehold.it/2000x600/778899/F5F5F5" alt="Welcome to my Portfolio">
+			<img src="http://placehold.it/2000x600/778899/F5F5F5&text=Excuse&nbsp;The&nbsp;Mess" alt="Welcome to my Portfolio">
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
 		{% include nav.html %}
