Preliminary SVG Established.
- May need to split into two images. Need to research.
- Still needs to Parallax.
- Mountains need to go lower.
- SVG structure needs to be organized.
- Stars need to be released from clipping mask to ensure for their
rotation.
- SVG needs to be properly masked.

+ Hovering over the Tiny House activates a light. ^_^

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ title: Welcome
 
 	<header>
 		<div>
-			<img src="http://placehold.it/2000x600/778899/F5F5F5&text=Excuse&nbsp;The&nbsp;Mess" alt="Welcome to my Portfolio">
+			<!-- <img src="http://placehold.it/2000x600/778899/F5F5F5&text=Excuse&nbsp;The&nbsp;Mess" alt="Welcome to my Portfolio"> -->
+			<object type="image/svg+xml" data="images/slate-grey-banner.svg">
+				<a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
+			</object>	
+
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
 		{% include nav.html %}
