SVG Properly Set up
+ Mask crops properly
+ Naming Structure Amended
+ Hovering over house still illuminates window. :)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Welcome
 	<header>
 		<div>
 			<!-- <img src="http://placehold.it/2000x600/778899/F5F5F5&text=Excuse&nbsp;The&nbsp;Mess" alt="Welcome to my Portfolio"> -->
-			<object type="image/svg+xml" data="images/slate-grey-banner.svg">
+			<object type="image/svg+xml" data="images/starry-banner.svg">
 				<a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
 			</object>	
 
