Testing Multiple Portfolio pieces
+ Success, no interference.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ title: Welcome
 	</div>
 	
 			{% include pieces.html %}
+
+			{% include pieces.html %}
+
+			{% include pieces.html %}
+
+			{% include pieces.html %}
 	
 	<div class="wrap buffer">
 		<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
