--- a/404.html
+++ b/404.html
@@ -1,8 +1,26 @@
 ---
 layout: default
 title: 404 Error
-meta-desc: You've encountered an error. Let's fix that.
+meta-desc: You've reached a page that's no longer here. Let's fix that.
 meta-keywords: error, gabriel mitchell, portfolio
 ---
 
-<h1>Oh No, 404.</h1>
+<div id="error" class="errorbg wrap">
+	<div class="unit unit-s-1 unit-m-3-8 unit-l-4-8 unit-xl-3-8 unit-xxl-3-8">
+		<img src="images/compass.svg" alt="">
+	</div>
+	<div class="unit-r unit-s-1 unit-m-5-8 unit-l-4-8 unit-xl-5-8 unit-xxl-5-8">
+		<div id="ohno">
+			<h1 class="multiverse white w700 ohno-text">Oh No, 404.</h1>
+			<h4 class="white w400">Not all those who wander are lost. Except you. Let's fix that:</h4>
+			<ul>
+				<li>Check the URL and make sure its correct</li>
+				<li>The page you're looking for has been moved or deleted, click <a href="http://gabrielmitchell.ca" class="400"><strong>here</strong></a> to head home.</li> 
+				<li>Use the navigation below to find your way again.</li>
+			</ul>
+		</div>	
+	</div>
+	<div class="unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-5-8 unit-xxl-5-8">
+			{% include nav.html %}
+	</div>
+</div>
