--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ title: Welcome
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
-		{% include nav.html %}
+		<div class="nav-top">
+			{% include nav.html %}
+		</div>
 	</header>
 
 	<div id="welcome" class="welcome">
@@ -55,6 +57,8 @@ title: Welcome
 		{% include contact.html %}
 
 	<footer>
-		{% include nav.html %} 
+		<div class="nav-btm">
+			{% include nav.html %} 
+		</div>
 	</footer>
 	<hr/>
