Hamburger Nav for Mobile Established
+ works only for mobile and small-tablet screens
+ hamburger nav is responsive
- JS interferes,

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Welcome
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
-		<div class="nav-top">
+<!--		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a> -->
+		<div class="nav-top nav-toggle" data-state="collapsed">
 			{% include nav.html %}
 		</div>
 	</header>
