Nav Toggle Established for Mobile +Resolved Issues
+ Devices below 768px will have hamburger nav.
+ Borders added to navigation units
+ No more weird yellow focus border, returned to native
+ Spacing issues between nav and star-bg resolved
+ Nav images no longer appear in mobile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome
 ---
 
 	<header>
-		<div>
+		<div class="mountains">
 			<!-- <img src="http://placehold.it/2000x600/778899/F5F5F5&text=Excuse&nbsp;The&nbsp;Mess" alt="Welcome to my Portfolio"> -->
 			<object type="image/svg+xml" data="images/starry-banner.svg">
 				<a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
@@ -12,7 +12,7 @@ title: Welcome
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
-<!--		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a> -->
+		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a>
 		<div class="nav-top nav-toggle" data-state="collapsed">
 			{% include nav.html %}
 		</div>
@@ -58,8 +58,6 @@ title: Welcome
 		{% include contact.html %}
 
 	<footer>
-		<div class="nav-btm">
-			{% include nav.html %} 
-		</div>
+
 	</footer>
 	<hr/>
