--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ title: Welcome
 		</div>
 	</div>
 	
-			{% include pieces.html %}
-
+			{% include pieces.html title="test1" desc="desc1" about="about1" thumb1="" img1="" alt1="" %}
+			
 			{% include pieces.html %}
 
 			{% include pieces.html %}
