Testing Information via Jekyll 2
+ Success!

--- a/index.html
+++ b/index.html
@@ -33,14 +33,26 @@ title: Welcome
 		</div>
 	</div>
 	
-			{% include pieces.html title="test1" desc="desc1" about="about1" thumb1="" img1="" alt1="" %}
-			
-			{% include pieces.html %}
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
 
-			{% include pieces.html %}
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
 
-			{% include pieces.html %}
-	
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+
+{% include pieces.html title="" desc="" about="" thumb1="" img1="" alt1="" thumb2="" img2="" alt2="" thumb3="" img3="" alt3="" thumb4="" img5="" alt5="" thumb6="" img6="" alt6="" thumb7="" img7="" alt7="" thumb8="" img8="" alt8="" %}
+									
 	<div class="wrap buffer">
 		<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
 			<h2 class="galaxy center-text w400">About</h2>
