--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Welcome
+meta-desc: Portfolio of Ottawa based graphic designer Gabriel Mitchell
+meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration, Graphic Arts
 ---
 
 	<header>
