--- a/work/forth.html
+++ b/work/forth.html
@@ -18,14 +18,15 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 			<p>Forth is an exploration of typography in relation to line, form, light and shadow. It is a map lacking in directions, orientation or landmarks. It urges onlookers to explore and become lost in the ridges and folds of the world. As with any journey, there is always more to discover. <em>Forth</em> is an ongoing experiment and new pages will be updated from time to time. </p>
 			<p>Featured in the <em>Applied Arts 2014 Student Awards</em>.</p>
 		</div>
+		
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-				<img src="../images/forth/2.jpg" alt="environment shot of Forth">
-		<figcaption class="atom w300 grey">Topographic maps were a major inspiration for the cover.</figcaption>
-		</figure>
-
+			<img src="../images/forth/1.jpg" alt="Forth">
+		<figcaption class="atom w300 grey">Topographic maps were a major inspiration for the cover. Making the topography rise into three dimensional space was a particularly challenge but it gave the piece a wonderful tactile feel.</figcaption>
+		</figure>		
+		
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
 			<img src="../images/forth/3.jpg" alt="detail shot of topographic cover">
-		<figcaption class="atom w300 grey">Close up on the side</figcaption>
+		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
@@ -57,8 +58,7 @@ a great, big, vast world that you’ve seen none percent of. And even the inside
 		</figure>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
-			<img src="../images/forth/1.jpg" alt="Forth">
-		<figcaption class="atom w300 grey">Making the topography rise into three dimensional space was a particularly fun challenge.</figcaption>
+				<img src="../images/forth/2.jpg" alt="environment shot of Forth">
+		<figcaption class="atom w300 grey"></figcaption>
 		</figure>
-
 	</div>
