Name + Jobs updated

--- a/hidden.html
+++ b/hidden.html
@@ -14,6 +14,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
+		<h2 class="center-text w300 planet no-marg"><em>Graphic Designer &times; Illustrator &times; Explorer</em></h2>
 		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a>
 		<div class="nav-top nav-toggle" data-state="collapsed">
 			{% include nav.html %}
@@ -23,7 +24,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 	<div id="welcome" class="welcome">
 	<!--	<img class="logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">-->
 		
-		<object type="image/svg+xml" data="images/logo-gm.svg" class="logo">
+		<object type="image/svg+xml" data="images/logo3.svg" class="logo">
 		  <a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
 		</object>	
 		
