--- a/hidden.html
+++ b/hidden.html
@@ -14,7 +14,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
-		<h2 class="center-text w300 planet no-marg"><em>Graphic Designer &times; Illustrator &times; Explorer</em></h2>
+		<h2 class="center-text w300 organism no-marg serif"><em>Graphic Designer &times; Illustrator &times; Explorer</em></h2>
 		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a>
 		<div class="nav-top nav-toggle" data-state="collapsed">
 			{% include nav.html %}
