Type Reworking for h2's on Works

--- a/work/cariboucoffee.html
+++ b/work/cariboucoffee.html
@@ -10,7 +10,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
 			<h1 class="universe w700 no-margin">Repackage</h1>
-			<h2 class="planet w100 no-margin">Bold Taste / Bold Packaging</h2>
+			<h2 class="planet w300 no-margin serif"><em>Bold Taste / Bold Packaging</em></h2>
 			<h6 class="no-margin"><small class="atom lightslate"><em>Packaging</em></small></h6>
 		</div>
 		
