--- a/work/forth.html
+++ b/work/forth.html
@@ -10,7 +10,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
 			<h1 class="universe w700 no-margin">FORTH</h1>
-			<h2 class="planet w100 no-margin">A Typographic Journey</h2>
+			<h2 class="planet w100 no-margin serif"><em>A Typographic Journey</em></h2>
 			<h6 class="no-margin"><small class="atom lightslate"><em>Typography, Handlettering, Made &amp; Crafted, Applied Arts Feature</em></small></h6>
 		</div>
 		
