--- a/work/cariboucoffee.html
+++ b/work/cariboucoffee.html
@@ -9,13 +9,13 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 		<img src="../images/cariboucoffee/caribou-intro.jpg" alt="caribou coffee"class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
-			<h1 class="universe w700 no-margin">Repackage</h1>
-			<h2 class="planet w300 no-margin serif"><em>Bold Taste / Bold Packaging</em></h2>
+			<h1 class="universe w700 no-margin">Caribou Coffee Packaging</h1>
+			<h2 class="planet w300 no-margin serif"><em>Bold Packaging to Accompany Bold Taste</em></h2>
 			<h6 class="no-margin"><small class="atom lightslate"><em>Packaging</em></small></h6>
 		</div>
 		
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object info">
-			<p>The Caribou Coffee brand is down to earth with a quirky attitude to boot. To continue this attitude, this project uses a careful selection of quality materials, detailed touches, and celebrates the ideal of setting itself apart. In-depth and careful research revealed a startling pattern to coffee packaging trends. In response, the package employs bold eye-catching colors particular to the flavor to adorn the container, a slanted top-opening creates a novel encounter for the user, a glass container wrapped in a dense burlap (to prevent light entering which preserves the beans) gives the individual a tactile experience. The interior of the box is decorated with all the icons in the Caribou flavor line. This packaging helps promote Caribou's philosophy of quality above all else.</p>
+			<p>The Caribou Coffee brand is down to earth with a quirky attitude to boot. To continue this attitude, this project uses a careful selection of quality materials, detailed touches, and celebrates the ideal of setting itself apart. In-depth and careful research revealed a startling pattern to coffee packaging trends. In response, the package employs the bright flavor line colors  to adorn the container. A slanted top-opening creates a unique encounter for the user, a glass container wrapped in a dense burlap (to prevent light entering which preserves the beans) gives the individual a tactile experience. The interior of the box is decorated with all the icons in the Caribou flavor line. This packaging promotes Caribou's philosophy of a premium quality roast and coffee.</p>
 		</div>
 		
 		<figure class="unit-s-6-8 unit-m-5-8 unit-l-3-8 unit-xl-2-8 unit-xxl-3-8 center-object piece">
