--- a/work/aptstory.html
+++ b/work/aptstory.html
@@ -10,7 +10,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 	
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object center-text title">
 			<h1 class="universe w700 no-margin">Apartment Story</h1>
-			<h2 class="planet w300 no-margin serif"><em>The National Poster</em></h2>
+			<h2 class="planet w300 no-margin serif"><em>The National Gig Poster</em></h2>
 			<h6 class="no-margin"><small class="atom lightslate"><em>Digital Illustration, Gig Poster</em></small></h6>
 		</div>
 		
