--- a/hidden.html
+++ b/hidden.html
@@ -35,8 +35,14 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 			<h2 class="galaxy center-text w400">Works</h2>
 		</div>
 	</div>
-	
-{% include pieces.html title="Forth" desc="A Typographic Adventure" about="Forth is an exploration of typography in relation to line, form, light and shadow. It is a map lacking in directions, orientation or landmarks. It urges onlookers to explore and become lost in the ridges and folds of the world. As with any exploration, there is always more to discover—with that in mind, more pieces continue to be added over time. Featured in the Applied Arts 2014 Student Awards." thumb1="/thumbs/forth/1thumb.jpg" img1="/images/forth/1.jpg" alt1="Forth cover" thumb2="/thumbs/forth/2thumb.jpg" img2="/images/forth/2.jpg" alt2="Forth with tools" thumb3="/thumbs/forth/3thumb.jpg" img3="/images/forth/3.jpg" alt3="Side view showing topographic depth." thumb4="/thumbs/forth/4thumb.jpg" img4="/images/forth/4.jpg" alt4="The word run written in sedum plants" thumb5="/thumbs/forth/5thumb.jpg" img5="/images/forth/5.jpg" alt5="I'm bored is a useless thing to say" thumb6="/thumbs/forth/6thumb.jpg" img6="/images/forth/1.jpg" alt6="Pop up of origami ship" thumb7="/thumbs/forth/7thumb.jpg" img7="/images/forth/7.jpg" alt7="Macro of hand poked holes forming the word star" thumb8="/thumbs/forth/8thumb.jpg" img8="/images/forth/8.jpg" alt8="Star page at dark with hole illuminated" %}
+	<div class="center-object wrap clearfix unit-xl-5-8">
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+	</div>
 
 	<div class="wrap buffer">
 		<div id="about" class="buffer banner clearfix unit-s-1 unit-m-1 unit-l-5-8 unit-xl-5-8 nav-bar-center">
