Image Size Updated

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: work
 title: 404 Error
 meta-desc: You've reached a page that's no longer here. Let's fix that.
 meta-keywords: error, gabriel mitchell, portfolio
