--- a/hidden.html
+++ b/hidden.html
@@ -36,12 +36,12 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		</div>
 	</div>
 	<div class="center-object wrap clearfix unit-xl-5-8">
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
-		{% include pieces.html title="Forth" link="forth.html" img="forth/forth-intro.jpg" alt="forth" %}
+		{% include pieces.html title="SHINE" link="forth.html" img="shine/1.jpg" alt="SHINE" %}
+		{% include pieces.html title="FORTH" link="forth.html" img="forth/forth-intro.jpg" alt="Forth" %}
+		{% include pieces.html title="This Winter Be &hellip;" link="f21.html" img="f21/f21-intro.jpg" alt="Forever 21" %}
+		{% include pieces.html title="KJP" link="forth.html" img="kjp/kjp-intro.jpg" alt="KJP Select Woods" %}
+		{% include pieces.html title="Apartment Story" link="aptstory.html" img="apartmentstory/national-intro.jpg" alt="forth" %}
+		{% include pieces.html title="IZZE" link="izze.html" img="izze/izze-intro.jpg" alt="forth" %}
 	</div>
 
 	<div class="wrap buffer">
