Updated Izze, Name Shift, Img Shift

--- a/work/izze.html
+++ b/work/izze.html
@@ -20,15 +20,20 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
 			<img src="../images/izze/1.jpg" alt="Newspaper Ad">
+		<figcaption class="atom w300 grey">Billboard Ad</figcaption>
+		</figure>		
+
+		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+			<img src="../images/izze/2.jpg" alt="Newspaper Ad">
 		<figcaption class="atom w300 grey">Color Newspaper Ad</figcaption>
 		</figure>		
 
 		<figure class="unit-s-6-8 unit-m-5-8 unit-l-3-8 unit-xl-3-8 unit-xxl-3-8 center-object piece">
-			<img src="../images/izze/2.jpg" alt="Vertical News Paper Ad">
+			<img src="../images/izze/3.jpg" alt="Vertical News Paper Ad">
 		<figcaption class="atom w300 grey">Possible motion graphic showing all flavors</figcaption>
 		</figure>		
 
 		<figure class="unit-s-6-8 unit-m-5-8 unit-l-3-8 unit-xl-3-8 unit-xxl-3-8 center-object piece">
-			<img src="../images/izze/3.jpg" alt="Newspaper Ad Two">
+			<img src="../images/izze/4.jpg" alt="Newspaper Ad Two">
 		<figcaption class="atom w300 grey">Magazine Ad or Postcard Ad</figcaption>
 		</figure>		
