relink to shine

--- a/hidden.html
+++ b/hidden.html
@@ -36,7 +36,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		</div>
 	</div>
 	<div class="center-object wrap clearfix unit-xl-5-8">
-		{% include pieces.html title="SHINE" link="forth.html" img="shine/1.jpg" alt="SHINE" %}
+		{% include pieces.html title="SHINE" link="shine.html" img="shine/1.jpg" alt="SHINE" %}
 		{% include pieces.html title="FORTH" link="forth.html" img="forth/forth-intro.jpg" alt="Forth" %}
 		{% include pieces.html title="This Winter Be &hellip;" link="f21.html" img="f21/f21-intro.jpg" alt="Forever 21" %}
 		{% include pieces.html title="KJP" link="forth.html" img="kjp/kjp-intro.jpg" alt="KJP Select Woods" %}
