--- a/hidden.html
+++ b/hidden.html
@@ -39,7 +39,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		{% include pieces.html title="SHINE" link="shine.html" img="shine/1.jpg" alt="SHINE" %}
 		{% include pieces.html title="FORTH" link="forth.html" img="forth/forth-intro.jpg" alt="Forth" %}
 		{% include pieces.html title="This Winter Be &hellip;" link="f21.html" img="f21/f21-intro.jpg" alt="Forever 21" %}
-		{% include pieces.html title="KJP" link="forth.html" img="kjp/kjp-intro.jpg" alt="KJP Select Woods" %}
+		{% include pieces.html title="KJP" link="kjp.html" img="kjp/kjp-intro.jpg" alt="KJP Select Woods" %}
 		{% include pieces.html title="Apartment Story" link="aptstory.html" img="apartmentstory/national-intro.jpg" alt="The National Gig Poster" %}
 		{% include pieces.html title="Caribou Coffee" link="cariboucoffee.html" img="cariboucoffee/caribou-intro.jpg" alt="Coffee Packaging" %}
 		{% include pieces.html title="IZZE" link="izze.html" img="izze/izze-intro.jpg" alt="forth" %}
