--- a/404.html
+++ b/404.html
@@ -15,12 +15,11 @@ meta-keywords: error, gabriel mitchell, portfolio
 			<h4 class="white w400">Not all those who wander are lost. Except you. Let's fix that:</h4>
 			<ul>
 				<li>Check the URL and make sure its correct</li>
-				<li>The page you're looking for has been moved or deleted, click <a href="http://gabrielmitchell.ca" class="400"><strong>here</strong></a> to head home.</li> 
-				<li>Use the navigation below to find your way again.</li>
+				<li>The page you're looking for has been moved or deleted</li> 
+				<li><a href="http://gabrielmitchell.ca" class="w400">Venture Home</a> or use the Navigation above.</li>
 			</ul>
 		</div>	
 	</div>
 	<div class="unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-5-8 unit-xxl-5-8">
-			{% include nav.html %}
 	</div>
 </div>
