feat(images) more caribou coffee imagery upped

--- a/work/cariboucoffee.html
+++ b/work/cariboucoffee.html
@@ -30,7 +30,23 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 	
 		<figure class="unit-s-6-8 unit-m-5-8 unit-l-3-8 unit-xl-2-8 unit-xxl-3-8 center-object piece">
 			<img src="../images/cariboucoffee/3.jpg" alt="package blueprints">
+		<figcaption class="atom w300 grey">Blueprints</figcaption>
+		</figure>		
+		
+		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+			<img src="../images/cariboucoffee/4.jpg" alt="Cross Fox and Obsidian Dark Roasts">
+		<figcaption class="atom w300 grey">Cross Fox and Obsidian Dark Roasts</figcaption>
+		</figure>		
+		
+		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+			<img src="../images/cariboucoffee/5.jpg" alt="Close up of Internal Sleeve">
+		<figcaption class="atom w300 grey">Internal sleeve detail</figcaption>
+		</figure>		
+		
+		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
+			<img src="../images/cariboucoffee/6.jpg" alt="good ol coffee">
 		<figcaption class="atom w300 grey"></figcaption>
 		</figure>		
+		
 	</div>
 	
