feat(cariboucoffee): reworded intro

--- a/work/shine.html
+++ b/work/shine.html
@@ -15,7 +15,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Graphic Arts
 		</div>
 		
 		<div class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object info">
-			<p>SHINE is for the local high school's anti-bullying club. To be printed on club t-shirts, this piece expanded beyond its original intent to appear in print flyers, brochures, posters, digital correspondence, on the web and fabric patches. The project had to inspire and communicate the idea of anti-bullying. In hopes to avoid the literally saying anti-bullying, a lighthouse was utilized as the symbol—to withstand on both sunny and stormy days and to be a beacon for others to follow.</p>
+			<p>SHINE is for Bell High School's anti-bullying club to be printed on club t-shirts. The project had to inspire and communicate the idea of anti-bullying. In hopes to avoid literally saying anti-bullying, a lighthouse was utilized as a symbolic gesture for individuals withstand on both sunny and stormy days and to be a beacon for others to follow.</p>
 		</div>
 
 		<figure class="unit-s-1 unit-m-1 unit-l-6-8 unit-xl-5-8 unit-xxl-5-8 center-object piece">
