--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 
 		</div>
 		<h1 class="center-text w700 universe">Gabriel Mitchell</h1>
-		<h2 class="center-text w300 organism no-marg serif"><em>Graphic Designer &times; Illustrator &times; Explorer</em></h2>
+		<h2 class="center-text w300 organism no-marg serif bottom-tons"><em>Graphic Designer &times; Illustrator &times; Explorer</em></h2>
 		<a href="#nav" class="nav-btn hide-text">Navigatory Console</a>
 		<div class="nav-top nav-toggle" data-state="collapsed">
 			{% include nav.html %}
@@ -24,9 +24,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 	<div id="welcome" class="welcome">
 	<!--	<img class="logo" src="images/logo-gm.svg" alt="Good Things Come To Those Who Wait.">-->
 		
-		<object type="image/svg+xml" data="images/logo3.svg" class="logo">
-		  <a href="#">Gabriel Mitchell Fox Logo <!-- fallback image in CSS --></a>
-		</object>	
+		<img src="images/logo3.svg" alt="Gabriel Mitchell Logo" class="logo">
 		
 	</div>
 	
