feat(index): the fountain addition

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ meta-keywords: Gabriel Mitchell, Ottawa, Portfolio, Graphic Design, Illustration
 		{% include pieces.html title="Apartment Story" link="aptstory.html" img="apartmentstory/national-intro.jpg" alt="The National Gig Poster" %}
 		{% include pieces.html title="Caribou Coffee" link="cariboucoffee.html" img="cariboucoffee/caribou-intro.jpg" alt="Coffee Packaging" %}
 		{% include pieces.html title="IZZE" link="izze.html" img="izze/izze-intro.jpg" alt="forth" %}
+		{% include pieces.html title="The Fountain" link="thefountain.html" img="thefountain/thefountain-grid.jpg" alt="The Fountain Vinyl Record" %}
 	</div>
 
 	<div class="wrap buffer">
